refactor(common): use Integer.valueOf() instead of new Integer()